--- a/css/styles.css
+++ b/css/styles.css
@@ -393,6 +393,61 @@ main p {
   line-height: 150%;
 }
 
+form.my-form {
+  margin: 1rem 10px;
+}
+form.my-form label {
+  display: block;
+  font-size: 0.8rem;
+  color: #7c1d47;
+  padding-top: 0.2rem;
+}
+form.my-form h3 {
+  font-size: 0.9rem;
+  color: #1d295f;
+  margin: 1.5rem 0 0.2rem 0;
+  border-bottom: 1px solid #eee;
+}
+form.my-form input[type=text],
+form.my-form input[type=email],
+form.my-form input[type=tel],
+form.my-form input[type=password],
+form.my-form input[type=number],
+form.my-form select {
+  display: block;
+  margin: 0.1rem 0 1rem 0;
+  border: 1px solid #999;
+  border-radius: 5px 5px 0 0;
+  border-bottom-width: 5px;
+  border-bottom-color: #555;
+  font-size: 1rem;
+  color: #3990c3;
+  width: 250px;
+  padding: 0.5rem 10px;
+}
+form.my-form input:required {
+  border-bottom-color: rgb(219, 0, 0);
+}
+form.my-form input:focus {
+  border-bottom-color: grey;
+}
+form.my-form input:required:valid {
+  border-bottom-color: green;
+}
+form.my-form input[type=submit] {
+  border: none;
+  background-color: #7c1d47;
+  color: white;
+  border-radius: 1rem;
+  padding: 0.75rem 1.5rem;
+  margin: 2rem 0;
+  width: 250px;
+  font-size: 1.2rem;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+}
+
 /* --------------------------- FOOTER --------------------------- */
 #footerWrapper {
   background-color: #1d295f;
