--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -104,6 +104,72 @@ main {
     }
 }// end main
 
+form.my-form {
+    margin: 1rem $gutter;
+
+    label {
+        display: block;
+        font-size: .8rem;
+        color: $secondaryColor;
+        padding-top: .2rem;
+    }
+    h3 {
+        font-size: .9rem;
+        color: $primaryColor;
+        margin: 1.5rem 0 .2rem 0;
+        border-bottom: 1px solid #eee;
+    }
+input[type=text],
+input[type=email],
+input[type=tel],
+input[type=password],
+input[type=number],
+select {
+    display: block;
+    margin: .1rem 0 1rem 0;
+    border: 1px solid #999;
+    border-radius: 5px 5px 0 0;
+    border-bottom-width: 5px;
+    border-bottom-color: #555;
+    font-size: 1rem;
+    color: $accentColor;
+    width: 250px;
+    padding: .5rem $gutter;
+}
+
+
+input:required {
+    border-bottom-color: rgb(219, 0, 0);
+}
+input:focus{border-bottom-color: grey;}
+input:required:valid{border-bottom-color: green;}
+
+input[type=submit] {
+    border: none;
+    background-color: $secondaryColor;
+    color: white;
+    border-radius: 1rem;
+    padding: .75rem 1.5rem;
+    margin: 2rem 0;
+    width: 250px;
+    font-size: 1.2rem;
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+
+
+    
+} // end of the form
+
+
+
+
+
+
+
+
+
 
 
 /* --------------------------- FOOTER --------------------------- */
