--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -110,12 +110,12 @@ form.my-form {
     label {
         display: block;
         font-size: .8rem;
-        color: $secondaryColor;
+        color: $accentColor;
         padding-top: .2rem;
     }
     h3 {
         font-size: .9rem;
-        color: $primaryColor;
+        color: $secondaryColor;
         margin: 1.5rem 0 .2rem 0;
         border-bottom: 1px solid #eee;
     }
