--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -123,7 +123,7 @@ input[type=text],
 input[type=email],
 input[type=tel],
 input[type=password],
-input[type=number],
+input[type=date],
 select {
     display: block;
     margin: .1rem 0 1rem 0;
