--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -78,6 +78,7 @@ div#navWrapper {
     }
     li.active a {
         color: $secondaryColor;
+        text-decoration: underline;
     }
  }//end of nav stuff
 
