--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -80,6 +80,7 @@ div#navWrapper {
         color: $secondaryColor;
         text-decoration: underline;
     }
+
  }//end of nav stuff
 
 
@@ -158,7 +159,10 @@ input[type=submit] {
     appearance: none;
 }
 
-
+input[type=radio],input[type=checkbox] {
+    padding: $gutter;
+    margin: $gutter;
+}
 
     
 } // end of the form
